# VoiceFlow

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  BULK_DELETE_VERIFICATION.md  CLAUDE.md  README.md  index.html  package.json  pyproject.toml  verify_bulk_delete.py
docs/profiling/: baseline_measurements.md  first-use-latency-analysis.md  first-use-latency-test.md  optimization_results.md  phase4-verification-procedure.md
installer/: build-installer.bat  voiceflow.iss
scripts/: measure_idle_resources.py
src/: App.tsx  index.css
src-pyloid/: app_controller.py  main.py  server.py
src-pyloid/services/: audio.py  clipboard.py  cudnn_downloader.py  database.py  gpu.py  hotkey.py  idle_timer.py  logger.py  model_manager.py  resource_monitor.py  settings.py  transcription.py
src-pyloid/tests/: test_database.py  test_idle_timer.py  test_logger.py  test_model_manager.py  test_resource_monitor.py
src/components/: AudioVisualizer.tsx  HistoryPage.tsx  HistoryTab.tsx  HomePage.tsx  HotkeyCapture.tsx  ModelDownloadModal.tsx  ModelDownloadProgress.tsx  ModelRecoveryModal.tsx  ResourceMonitor.tsx  SettingsTab.tsx  Sidebar.tsx  StatsHeader.tsx
src/components/ui/: button.tsx
src/lib/: api.ts  audio.ts  constants.ts  types.ts
src/pages/: Onboarding.tsx  Popup.tsx
